// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FLOWDESIGNER_FLOW_ADD_ELEMENTS > should batch many elements creation 1`] = `
{
  "childrens": {
    "node2": {},
    "nodeId": {},
  },
  "in": {
    "node2": {},
    "nodeId": {},
  },
  "links": {},
  "nodeTypes": {},
  "nodes": {
    "node2": NodeRecord {
      "data": NodeData {
        "properties": {},
      },
      "graphicalAttributes": NodeGraphicalAttributes {
        "nodeSize": {
          "height": 10,
          "width": 10,
        },
        "position": {
          "x": 10,
          "y": 10,
        },
        "properties": {},
      },
      "id": "node2",
      "type": undefined,
    },
    "nodeId": NodeRecord {
      "data": NodeData {
        "properties": {},
      },
      "graphicalAttributes": NodeGraphicalAttributes {
        "nodeSize": {
          "height": 10,
          "width": 10,
        },
        "position": {
          "x": 10,
          "y": 10,
        },
        "properties": {},
      },
      "id": "nodeId",
      "type": undefined,
    },
  },
  "out": {
    "node2": {},
    "nodeId": {
      "portId": {},
    },
  },
  "parents": {
    "node2": {},
    "nodeId": {},
  },
  "ports": {
    "portId": PortRecord {
      "data": PortData {
        "flowType": "batch",
        "properties": {},
      },
      "graphicalAttributes": PortGraphicalAttributes {
        "position": {
          "x": undefined,
          "y": undefined,
        },
        "properties": {
          "index": 0,
          "type": "OUTGOING",
        },
      },
      "id": "portId",
      "nodeId": "nodeId",
    },
  },
  "transform": {
    "k": 1,
    "x": 0,
    "y": 0,
  },
  "transformToApply": undefined,
}
`;

exports[`FLOWDESIGNER_FLOW_ADD_ELEMENTS > should batch one element creation 1`] = `
{
  "childrens": {
    "nodeId": {},
  },
  "in": {
    "nodeId": {},
  },
  "links": {},
  "nodeTypes": {},
  "nodes": {
    "nodeId": NodeRecord {
      "data": NodeData {
        "properties": {},
      },
      "graphicalAttributes": NodeGraphicalAttributes {
        "nodeSize": {
          "height": 10,
          "width": 10,
        },
        "position": {
          "x": 10,
          "y": 10,
        },
        "properties": {},
      },
      "id": "nodeId",
      "type": undefined,
    },
  },
  "out": {
    "nodeId": {},
  },
  "parents": {
    "nodeId": {},
  },
  "ports": {},
  "transform": {
    "k": 1,
    "x": 0,
    "y": 0,
  },
  "transformToApply": undefined,
}
`;

exports[`FLOWDESIGNER_FLOW_LOAD should reset old flow state and load news not touching flow config > should load elements 1`] = `
{
  "childrens": {
    "node2": {},
    "nodeId": {},
  },
  "in": {
    "node2": {},
    "nodeId": {},
  },
  "links": {},
  "nodeTypes": {},
  "nodes": {
    "node2": NodeRecord {
      "data": NodeData {
        "properties": {},
      },
      "graphicalAttributes": NodeGraphicalAttributes {
        "nodeSize": {
          "height": 10,
          "width": 10,
        },
        "position": {
          "x": 10,
          "y": 10,
        },
        "properties": {},
      },
      "id": "node2",
      "type": undefined,
    },
    "nodeId": NodeRecord {
      "data": NodeData {
        "properties": {},
      },
      "graphicalAttributes": NodeGraphicalAttributes {
        "nodeSize": {
          "height": 10,
          "width": 10,
        },
        "position": {
          "x": 10,
          "y": 10,
        },
        "properties": {},
      },
      "id": "nodeId",
      "type": undefined,
    },
  },
  "out": {
    "node2": {},
    "nodeId": {
      "portId": {},
    },
  },
  "parents": {
    "node2": {},
    "nodeId": {},
  },
  "ports": {
    "portId": PortRecord {
      "data": PortData {
        "properties": {},
      },
      "graphicalAttributes": PortGraphicalAttributes {
        "position": {
          "x": undefined,
          "y": undefined,
        },
        "properties": {
          "index": 0,
          "type": "OUTGOING",
        },
      },
      "id": "portId",
      "nodeId": "nodeId",
    },
  },
  "transform": {
    "k": 1,
    "x": 0,
    "y": 0,
  },
  "transformToApply": undefined,
}
`;

exports[`FLOWDESIGNER_PAN_TO set a calculated transformation into transformToApply >  1`] = `
{
  "childrens": {},
  "in": {},
  "links": {},
  "nodeTypes": {},
  "nodes": {},
  "out": {},
  "parents": {},
  "ports": {},
  "transform": {
    "k": 1,
    "x": 0,
    "y": 0,
  },
  "transformToApply": Transform {
    "k": 1,
    "x": -400,
    "y": -400,
  },
}
`;
